@@ -1,5 +1,5 @@
 # This Makefile.PL for Mojolicious-Plugin-Subprocess was generated by
-# Dist::Zilla::Plugin::MakeMaker::Awesome 0.47.
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.48.
 # Don't edit it but the dist.ini and plugins used to construct it.
 
 use strict;
