@@ -1,6 +1,0 @@
-requires 'perl' => '5.010001';
-requires 'Mojolicious' => '7.62';
-suggests 'Mojo::IOLoop::Subprocess::Role::Sereal';
-test_requires 'Test::More' => '0.88';
-test_requires 'Test::Needs';
-author_requires 'Mojo::IOLoop::Subprocess::Role::Sereal';
