@@ -5,7 +5,7 @@ copyright_holder = Dan Book
 copyright_year   = 2016
 
 [@Author::DBOOK]
-:version = 0.032
+:version = v1.0.3
 installer = MakeMaker::Awesome
 MakeMaker::Awesome.delimiter = |
 MakeMaker::Awesome.header[0] = |use Config;
@@ -15,5 +15,5 @@ MakeMaker::Awesome.header[3] = |  exit 0;
 MakeMaker::Awesome.header[4] = |}
 Test::ReportPrereqs.include[0] = Sereal::Encoder
 Test::ReportPrereqs.include[1] = Sereal::Decoder
-irc = irc://irc.freenode.net/#mojo
+irc = ircs://irc.libera.chat/#mojo
 pod_tests = 1
