@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Update IRC metadata to libera.chat
 
 1.001     2018-06-04 18:19:04 EDT
   - Use promises instead of deprecated delay helper from DefaultHelpers.
